tests/invalid/loops/statement_in_condition.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    while(a: i64) {
        2;
    }
}